        * Tickets :
            - The name of the button to link to a Ticket (visible in configuration) has been fixed.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The widget 'creme_core.forms.header_filter.EntityCellsWidget' has been fixed
          to enable complex HTML representations produced by field printers.


== Version 2.4.11 ==

  UPGRADE NOTE :
    - You should re-generate the media files (creme generatemedia --settings=[...]).

  Users side :
  ------------
     # In the form for EntityFilter, selecting a level-2 foreign key (e.g. "Photograph/MIME type" in the filter for Contacts) was broken.
       Some code from Creme 2.5 has been backported to fix this issue. It brings some interesting features too :
        - The regular fields with foreign keys are now using the Select2 combobox with lazy loading & search.
        - The regular fields with static choices (like 'Discount' in billing lines) are now using combobox instead of a text input.
        - The custom fields of ENUM/MULTI_ENUM type are now using the Select2 combobox with lazy loading & search.
     # Apps :
        * Activities :
            - An icon was missing in the theme "chantilly" ('images/meeting_48.png').

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # In 'creme_core.forms' :
            - The class 'entity_filter.ModelRelatedField' can have string PK and this will not work with the default datatype 'json' used in EntityFilter widget.
            - In 'enumerable' :
                - In the class 'EnumerableChoiceSet', the optional property 'url' allows to use any URL instead of only "creme_core__enumerable_choices".
                - A class 'FieldEnumerableChoiceSet' has been added;
                  it inherits 'EnumerableChoiceSet' (which is now a base class) and has all its previous features (see the section <Breaking changes>).