@@ -1551,6 +1551,7 @@ about this fantastic animation studio."""
 
         old_count += 1
 
+        pline = self.refresh(pline)  # reset cache
         pline.quantity = Decimal('2')
         pline.discount_unit = FakeInvoiceLine.Discount.PERCENT
         pline.save()
@@ -1573,6 +1574,19 @@ about this fantastic animation studio."""
         #     ),
         #     vmodifs[2],
         # )
+
+    def test_auxiliary_creation_n_edition(self):
+        "Other modification on just created instance are not logged."
+        user = self.user
+        gainax = FakeOrganisation.objects.create(user=user, name='Gainax')
+        old_count = HistoryLine.objects.count()
+        todo = FakeTodo.objects.create(title='New logo', creme_entity=gainax)
+        self.assertEqual(old_count + 1, HistoryLine.objects.count())
+
+        # Not <todo = self.refresh(todo)> !!
+        todo.description = 'Blablabla'
+        todo.save()
+        self.assertEqual(old_count + 1, HistoryLine.objects.count())
 
     def test_auxiliary_edition_m2m01(self):
         cat1, cat2 = FakeTodoCategory.objects.order_by('id')[:2]
